--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
         "production": "mix --production"
     },
     "devDependencies": {
-        "axios": "^0.25",
+        "axios": "^1.7.2",
         "laravel-mix": "^6.0.6",
         "lodash": "^4.17.19",
         "postcss": "^8.1.14"
@@ -26,6 +26,7 @@
         "popper.js": "^1.12",
         "select2": "^4.0.13",
         "sweetalert": "^1.1.3",
+        "sweetalert2": "^11.6.13",
         "vue": "^2.5.17",
         "vue-template-compiler": "^2.6.12"
     }
